infra/k8s/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: docker19bct0189/user
---
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  selector:
    app: user
  type: ClusterIP
  ports:
    - name: user
      protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: user-node-srv
spec:
  type: NodePort
  selector: 
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 3001
      targetPort: 3001
