infra/k8s/user-interaction-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interaction-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interaction
  template:
    metadata:
      labels:
        app: interaction
    spec:
      containers:
        - name: interaction
          image: docker19bct0189/interaction
---
apiVersion: v1
kind: Service
metadata:
  name: interaction-srv
spec:
  selector:
    app: interaction
  type: ClusterIP
  ports:
    - name: interaction
      protocol: TCP
      port: 3002
      targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: interaction-node-srv
spec:
  type: NodePort
  selector: 
    app: interaction
  ports:
    - name: interaction
      protocol: TCP
      port: 3002
      targetPort: 3002
