infra/k8s/user-interaction-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interaction-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interaction-mongo
  template:
    metadata:
      labels:
        app: interaction-mongo
    spec:
      containers:
        - name: interaction-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: interaction-mongo-srv
spec:
  selector:
    app: interaction-mongo
  type: ClusterIP
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: interaction-mongo-node-srv
spec:
  type: NodePort
  selector: 
    app: interaction-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
