infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: testapi.com
      http:
        paths:
          - path: /api/content/?(.*)
            pathType: Prefix
            backend:
              service:
                name: content-srv
                port:
                  number: 3000
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 3001
          - path: /api/user-interaction
            pathType: Prefix
            backend:
              service:
                name: interaction-srv
                port:
                  number: 3002
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: event-bus-srv
                port:
                  number: 5000
